--- a/Week4/Day 5/simple-app-pokemon/views/pokemon-details.hbs
+++ b/Week4/Day 5/simple-app-pokemon/views/pokemon-details.hbs
@@ -1,5 +1,8 @@
-
 <div>
   <h3>{{response.name}}</h3>
   <img src="{{response.url}}" alt="pokemon">
+  <br>
+  <form action="/pokemons/{{response._id}}/delete" method="POST">
+    <button>Delete</button>
+  </form>
 </div>
